# gstreamer-boilerplate-cpp

./: .gitignore  README.md  meson.build
gst-app/: configure.ac  meson.build
gst-app/src/: Makefile.am
gst-plugin/: autogen.sh  configure.ac  meson.build
gst-plugin/src/: Makefile.am  gstaudiofilter.c  gstmyfilter.cpp  gstmyfilter.h  gstplugin.c
